--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,19 +15,27 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body, html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.mybg { 
+  background-image: 
+      linear-gradient(270deg,  
+      rgba(47, 0, 225, 0),  
+      rgb(0, 0, 0),
+      rgb(0, 0, 0)
+      ), 
+      url('../../public/right\ color\ bg.svg'); 
+  background-repeat: no-repeat; 
+  
+} 
+
+.card-bg{
+  background: rgb(26,26,26);
+  background: linear-gradient(159deg, rgba(26,26,26,1) 0%, rgba(20,20,20,1) 58%, rgba(16,16,16,1) 100%);
 }
